test/2-errors/parse-bare-quo-nl.test
{
  'code' : 1,
  'err' : '''\
test/2-errors/parse-bare-quo-nl.ploy:1:2: parse error: unexpected character: '\\n'
    `
     ^
'''
}
